internal/compiler/parser/generated/neva_parser.go
// Code generated from ./neva.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parsing // neva
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type nevaParser struct {
	*antlr.BaseParser
}

var NevaParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func nevaParserInit() {
	staticData := &NevaParserStaticData
	staticData.LiteralNames = []string{
		"", "'pub'", "'type'", "'struct'", "'union'", "'interface'", "'const'",
		"'def'", "'import'", "'true'", "'false'", "'-'", "'/'", "'='", "'<'",
		"'>'", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "':'", "'.'",
		"'?'", "'$'", "'@'", "'#'", "'::'", "'->'", "'*'", "'---'",
	}
	staticData.SymbolicNames = []string{
		"", "PUB", "TYPE", "STRUCT", "UNION", "INTERFACE", "CONST", "DEF", "IMPORT",
		"TRUE", "FALSE", "MINUS", "SLASH", "EQ", "LT", "GT", "LPAREN", "RPAREN",
		"LBRACE", "RBRACE", "LBRACK", "RBRACK", "COMMA", "COLON", "DOT", "QUEST",
		"DOLLAR", "AT", "HASH", "DCOLON", "ARROW", "STAR", "DASH3", "IDENTIFIER",
		"INT", "FLOAT", "STRING", "COMMENT", "NEWLINE", "WS",
	}
	staticData.RuleNames = []string{
		"prog", "stmt", "compilerDirectives", "compilerDirective", "compilerDirectiveArg",
		"importStmt", "importBlockItem", "importDef", "importAlias", "importPath",
		"importPathMod", "importMod", "importModeDelim", "importPathPkg", "entityRef",
		"localEntityRef", "importedEntityRef", "pkgRef", "entityName", "typeStmt",
		"typeDef", "typeParams", "typeParamList", "typeParam", "typeExpr", "typeInstExpr",
		"typeArgs", "typeLitExpr", "structTypeExpr", "structFields", "structField",
		"unionTypeExpr", "unionFields", "unionField", "interfaceStmt", "interfaceDef",
		"inPortsDef", "outPortsDef", "portsDef", "portDef", "singlePortDef",
		"arrayPortDef", "constStmt", "constDef", "constLit", "bool", "unionLit",
		"listLit", "listItems", "compositeItem", "structLit", "structValueFields",
		"structValueField", "compStmt", "compDef", "compBody", "compNodesDef",
		"compNodesDefBody", "compNodeDef", "nodeInst", "errGuard", "nodeDIArgs",
		"connDefList", "connDef", "senderSide", "multipleSenderSide", "singleSenderSide",
		"senderConstRef", "receiverSide", "chainedNormConn", "portAddr", "lonelySinglePortAddr",
		"lonelyArrPortAddr", "singlePortAddr", "arrPortAddr", "portAddrNode",
		"portAddrPort", "portAddrIdx", "structSelectors", "singleReceiverSide",
		"multipleReceiverSide",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// nevaParserInit initializes any static state used to implement nevaParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewnevaParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func NevaParserInit() {
	staticData := &NevaParserStaticData
	staticData.once.Do(nevaParserInit)
}

// NewnevaParser produces a new parser instance for the optional input antlr.TokenStream.
func NewnevaParser(input antlr.TokenStream) *nevaParser {
	NevaParserInit()
	this := new(nevaParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &NevaParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "neva.g4"

	return this
}

// nevaParser tokens.
const (
	nevaParserEOF        = antlr.TokenEOF
	nevaParserPUB        = 1
	nevaParserTYPE       = 2
	nevaParserSTRUCT     = 3
	nevaParserUNION      = 4
	nevaParserINTERFACE  = 5
	nevaParserCONST      = 6
	nevaParserDEF        = 7
	nevaParserIMPORT     = 8
	nevaParserTRUE       = 9
	nevaParserFALSE      = 10
	nevaParserMINUS      = 11
	nevaParserSLASH      = 12
	nevaParserEQ         = 13
	nevaParserLT         = 14
	nevaParserGT         = 15
	nevaParserLPAREN     = 16
	nevaParserRPAREN     = 17
	nevaParserLBRACE     = 18
	nevaParserRBRACE     = 19
	nevaParserLBRACK     = 20
	nevaParserRBRACK     = 21
	nevaParserCOMMA      = 22
	nevaParserCOLON      = 23
	nevaParserDOT        = 24
	nevaParserQUEST      = 25
	nevaParserDOLLAR     = 26
	nevaParserAT         = 27
	nevaParserHASH       = 28
	nevaParserDCOLON     = 29
	nevaParserARROW      = 30
	nevaParserSTAR       = 31
	nevaParserDASH3      = 32
	nevaParserIDENTIFIER = 33
	nevaParserINT        = 34
	nevaParserFLOAT      = 35
	nevaParserSTRING     = 36
	nevaParserCOMMENT    = 37
	nevaParserNEWLINE    = 38
	nevaParserWS         = 39
)

// nevaParser rules.
const (
	nevaParserRULE_prog                 = 0
	nevaParserRULE_stmt                 = 1
	nevaParserRULE_compilerDirectives   = 2
	nevaParserRULE_compilerDirective    = 3
	nevaParserRULE_compilerDirectiveArg = 4
	nevaParserRULE_importStmt           = 5
	nevaParserRULE_importBlockItem      = 6
	nevaParserRULE_importDef            = 7
	nevaParserRULE_importAlias          = 8
	nevaParserRULE_importPath           = 9
	nevaParserRULE_importPathMod        = 10
	nevaParserRULE_importMod            = 11
	nevaParserRULE_importModeDelim      = 12
	nevaParserRULE_importPathPkg        = 13
	nevaParserRULE_entityRef            = 14
	nevaParserRULE_localEntityRef       = 15
	nevaParserRULE_importedEntityRef    = 16
	nevaParserRULE_pkgRef               = 17
	nevaParserRULE_entityName           = 18
	nevaParserRULE_typeStmt             = 19
	nevaParserRULE_typeDef              = 20
	nevaParserRULE_typeParams           = 21
	nevaParserRULE_typeParamList        = 22
	nevaParserRULE_typeParam            = 23
	nevaParserRULE_typeExpr             = 24
	nevaParserRULE_typeInstExpr         = 25
	nevaParserRULE_typeArgs             = 26
	nevaParserRULE_typeLitExpr          = 27
	nevaParserRULE_structTypeExpr       = 28
	nevaParserRULE_structFields         = 29
	nevaParserRULE_structField          = 30
	nevaParserRULE_unionTypeExpr        = 31
	nevaParserRULE_unionFields          = 32
	nevaParserRULE_unionField           = 33
	nevaParserRULE_interfaceStmt        = 34
	nevaParserRULE_interfaceDef         = 35
	nevaParserRULE_inPortsDef           = 36
	nevaParserRULE_outPortsDef          = 37
	nevaParserRULE_portsDef             = 38
	nevaParserRULE_portDef              = 39
	nevaParserRULE_singlePortDef        = 40
	nevaParserRULE_arrayPortDef         = 41
	nevaParserRULE_constStmt            = 42
	nevaParserRULE_constDef             = 43
	nevaParserRULE_constLit             = 44
	nevaParserRULE_bool                 = 45
	nevaParserRULE_unionLit             = 46
	nevaParserRULE_listLit              = 47
	nevaParserRULE_listItems            = 48
	nevaParserRULE_compositeItem        = 49
	nevaParserRULE_structLit            = 50
	nevaParserRULE_structValueFields    = 51
	nevaParserRULE_structValueField     = 52
	nevaParserRULE_compStmt             = 53
	nevaParserRULE_compDef              = 54
	nevaParserRULE_compBody             = 55
	nevaParserRULE_compNodesDef         = 56
	nevaParserRULE_compNodesDefBody     = 57
	nevaParserRULE_compNodeDef          = 58
	nevaParserRULE_nodeInst             = 59
	nevaParserRULE_errGuard             = 60
	nevaParserRULE_nodeDIArgs           = 61
	nevaParserRULE_connDefList          = 62
	nevaParserRULE_connDef              = 63
	nevaParserRULE_senderSide           = 64
	nevaParserRULE_multipleSenderSide   = 65
	nevaParserRULE_singleSenderSide     = 66
	nevaParserRULE_senderConstRef       = 67
	nevaParserRULE_receiverSide         = 68
	nevaParserRULE_chainedNormConn      = 69
	nevaParserRULE_portAddr             = 70
	nevaParserRULE_lonelySinglePortAddr = 71
	nevaParserRULE_lonelyArrPortAddr    = 72
	nevaParserRULE_singlePortAddr       = 73
	nevaParserRULE_arrPortAddr          = 74
	nevaParserRULE_portAddrNode         = 75
	nevaParserRULE_portAddrPort         = 76
	nevaParserRULE_portAddrIdx          = 77
	nevaParserRULE_structSelectors      = 78
	nevaParserRULE_singleReceiverSide   = 79
	nevaParserRULE_multipleReceiverSide = 80
)

// IProgContext is an interface to support dynamic dispatch.
type IProgContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllNEWLINE() []antlr.TerminalNode
	NEWLINE(i int) antlr.TerminalNode
	AllCOMMENT() []antlr.TerminalNode
	COMMENT(i int) antlr.TerminalNode
	AllStmt() []IStmtContext
	Stmt(i int) IStmtContext

	// IsProgContext differentiates from other interfaces.
	IsProgContext()
}

type ProgContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgContext() *ProgContext {
	var p = new(ProgContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = nevaParserRULE_prog
	return p
}

func InitEmptyProgContext(p *ProgContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = nevaParserRULE_prog
}

func (*ProgContext) IsProgContext() {}

func NewProgContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgContext {
	var p = new(ProgContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = nevaParserRULE_prog

	return p
}

func (s *ProgContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgContext) EOF() antlr.TerminalNode {
	return s.GetToken(nevaParserEOF, 0)
}

func (s *ProgContext) AllNEWLINE() []antlr.TerminalNode {
	return s.GetTokens(nevaParserNEWLINE)
}

func (s *ProgContext) NEWLINE(i int) antlr.TerminalNode {
	return s.GetToken(nevaParserNEWLINE, i)
}

func (s *ProgContext) AllCOMMENT() []antlr.TerminalNode {
	return s.GetTokens(nevaParserCOMMENT)
}

func (s *ProgContext) COMMENT(i int) antlr.TerminalNode {
	return s.GetToken(nevaParserCOMMENT, i)
}

func (s *ProgContext) AllStmt() []IStmtContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStmtContext); ok {
			len++
		}
	}

	tst := make([]IStmtContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStmtContext); ok {
			tst[i] = t.(IStmtContext)
			i++
		}
	}

	return tst
}

func (s *ProgContext) Stmt(i int) IStmtContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStmtContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStmtContext)
}

func (s *ProgContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(nevaListener); ok {
		listenerT.EnterProg(s)
	}
}

func (s *ProgContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(nevaListener); ok {
		listenerT.ExitProg(s)
	}
}

func (p *nevaParser) Prog() (localctx IProgContext) {
	localctx = NewProgContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, nevaParserRULE_prog)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(167)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&412585296358) != 0 {
		p.SetState(165)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetTokenStream().LA(1) {
		case nevaParserNEWLINE:
			{
				p.SetState(162)
				p.Match(nevaParserNEWLINE)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		case nevaParserCOMMENT:
			{
				p.SetState(163)
				p.Match(nevaParserCOMMENT)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		case nevaParserPUB, nevaParserTYPE, nevaParserINTERFACE, nevaParserCONST, nevaParserDEF, nevaParserIMPORT, nevaParserHASH:
			{
				p.SetState(164)
				p.Stmt()
			}

		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(169)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(170)
		p.Match(nevaParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStmtContext is an interface to support dynamic dispatch.
type IStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ImportStmt() IImportStmtContext
	TypeStmt() ITypeStmtContext
	InterfaceStmt() IInterfaceStmtContext
	ConstStmt() IConstStmtContext
	CompStmt() ICompStmtContext

	// IsStmtContext differentiates from other interfaces.
	IsStmtContext()
}

type StmtContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStmtContext() *StmtContext {
	var p = new(StmtContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = nevaParserRULE_stmt
	return p
}

func InitEmptyStmtContext(p *StmtContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = nevaParserRULE_stmt
}

func (*StmtContext) IsStmtContext() {}

func NewStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StmtContext {
	var p = new(StmtContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = nevaParserRULE_stmt

	return p
}

func (s *StmtContext) GetParser() antlr.Parser { return s.parser }

func (s *StmtContext) ImportStmt() IImportStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IImportStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IImportStmtContext)
}

func (s *StmtContext) TypeStmt() ITypeStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeStmtContext)
}

func (s *StmtContext) InterfaceStmt() IInterfaceStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInterfaceStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInterfaceStmtContext)
}

func (s *StmtContext) ConstStmt() IConstStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConstStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConstStmtContext)
}

func (s *StmtContext) CompStmt() ICompStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICompStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICompStmtContext)
}

func (s *StmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(nevaListener); ok {
		listenerT.EnterStmt(s)
	}
}

func (s *StmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(nevaListener); ok {
		listenerT.ExitStmt(s)
	}
}

func (p *nevaParser) Stmt() (localctx IStmtContext) {
	localctx = NewStmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, nevaParserRULE_stmt)
	p.SetState(177)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(172)
			p.ImportStmt()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(173)
			p.TypeStmt()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(174)
			p.InterfaceStmt()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(175)
			p.ConstStmt()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(176)
			p.CompStmt()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICompilerDirectivesContext is an interface to support dynamic dispatch.
type ICompilerDirectivesContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllCompilerDirective() []ICompilerDirectiveContext
	CompilerDirective(i int) ICompilerDirectiveContext
	AllNEWLINE() []antlr.TerminalNode
	NEWLINE(i int) antlr.TerminalNode

	// IsCompilerDirectivesContext differentiates from other interfaces.
	IsCompilerDirectivesContext()
}

type CompilerDirectivesContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCompilerDirectivesContext() *CompilerDirectivesContext {
	var p = new(CompilerDirectivesContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = nevaParserRULE_compilerDirectives
	return p
}

func InitEmptyCompilerDirectivesContext(p *CompilerDirectivesContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = nevaParserRULE_compilerDirectives
}

func (*CompilerDirectivesContext) IsCompilerDirectivesContext() {}

func NewCompilerDirectivesContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CompilerDirectivesContext {
	var p = new(CompilerDirectivesContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = nevaParserRULE_compilerDirectives

	return p
}

func (s *CompilerDirectivesContext) GetParser() antlr.Parser { return s.parser }

func (s *CompilerDirectivesContext) AllCompilerDirective() []ICompilerDirectiveContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ICompilerDirectiveContext); ok {
			len++
		}
	}

	tst := make([]ICompilerDirectiveContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ICompilerDirectiveContext); ok {
			tst[i] = t.(ICompilerDirectiveContext)
			i++
		}
	}

	return tst
}

func (s *CompilerDirectivesContext) CompilerDirective(i int) ICompilerDirectiveContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICompilerDirectiveContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICompilerDirectiveContext)
}

func (s *CompilerDirectivesContext) AllNEWLINE() []antlr.TerminalNode {
	return s.GetTokens(nevaParserNEWLINE)
}

func (s *CompilerDirectivesContext) NEWLINE(i int) antlr.TerminalNode {
	return s.GetToken(nevaParserNEWLINE, i)
}

func (s *CompilerDirectivesContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CompilerDirectivesContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CompilerDirectivesContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(nevaListener); ok {
		listenerT.EnterCompilerDirectives(s)
	}
}

func (s *CompilerDirectivesContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(nevaListener); ok {
		listenerT.ExitCompilerDirectives(s)
	}
}

func (p *nevaParser) CompilerDirectives() (localctx ICompilerDirectivesContext) {
	localctx = NewCompilerDirectivesContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, nevaParserRULE_compilerDirectives)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(182)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == nevaParserHASH {
		{
			p.SetState(179)
			p.CompilerDirective()
		}
		{
			p.SetState(180)
			p.Match(nevaParserNEWLINE)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

		p.SetState(184)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICompilerDirectiveContext is an interface to support dynamic dispatch.
type ICompilerDirectiveContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	HASH() antlr.TerminalNode
	IDENTIFIER() antlr.TerminalNode
	CompilerDirectiveArg() ICompilerDirectiveArgContext

	// IsCompilerDirectiveContext differentiates from other interfaces.
	IsCompilerDirectiveContext()
}

type CompilerDirectiveContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCompilerDirectiveContext() *CompilerDirectiveContext {
	var p = new(CompilerDirectiveContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = nevaParserRULE_compilerDirective
	return p
}
